# witboost-python-scaffold

./: .gitignore  .gitlab-ci.yml  README.md  generate_api_setup.py
docs/: API.md
helm/: Chart.yaml  README.md  values.yaml
helm/templates/: _helpers.tpl  deployment.yaml  service.yaml
specific-provisioner/: pyproject.toml
specific-provisioner/docs/: docker.md  opentelemetry.md
specific-provisioner/src/: app_config.py  dependencies.py  main.py
specific-provisioner/src/models/: api_models.py  data_product_descriptor.py
specific-provisioner/src/utility/: parsing_pydantic_models.py
specific-provisioner/tests/: test_data_product_descriptor.py  test_dependencies.py  test_main.py  test_parse_yaml_with_model.py
specific-provisioner/tests/descriptors/: data_product_valid.yaml  descriptor_output_port_valid.yaml  descriptor_storage_valid.yaml
tech-adapter/: .pre-commit-config.yaml  interface-specification.yml  pyproject.toml
tech-adapter/docs/: docker.md
tech-adapter/src/: app_config.py  check_return_type.py  dependencies.py  main.py
tech-adapter/src/models/: api_models.py  data_product_descriptor.py
tech-adapter/src/utility/: parsing_pydantic_models.py
tech-adapter/tests/: test_app.py  test_data_product_descriptor.py  test_dependencies.py  test_main.py  test_parse_yaml_with_model.py
tech-adapter/tests/descriptors/: data_product_valid.yaml  descriptor_output_port_valid.yaml  descriptor_storage_valid.yaml
